--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,39 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
-    tools:context="com.example.nicestart.Login">
-
-
-    <!--    android:src="@drawable/girl"-->
-
+    tools:context="com.example.nicestart.Signup">
 
     <ImageView
         android:id="@+id/girl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitStart"
-        android:src="@drawable/girl"
+        android:src="@drawable/hipman"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"/>
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="71dp"
-        android:layout_height="94dp"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="48dp"
         android:src="@drawable/ic_thunder"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.9"
-        android:background="@drawable/gradient">
-    </View>
+        android:alpha="0.1"
+        android:background="@drawable/gradient"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"></View>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til1"
@@ -46,8 +43,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline3"
         app:layout_constraintStart_toStartOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/logo"
-        app:startIconDrawable="@drawable/usericon"
-        >
+        app:startIconDrawable="@drawable/usericon">
 
         <EditText
             android:layout_width="match_parent"
@@ -75,32 +71,36 @@
             android:background="@color/white"
             android:hint="password"
             android:inputType="textPassword"
-            android:maxLines="1"
-            />
+            android:maxLines="1" />
+
+
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <Button
         android:id="@+id/button"
+        style="@style/buttonflat"
+        android:layout_width="244dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="60dp"
         android:onClick="openMain"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@id/guideline3"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/til2"
-        style="@style/buttonflat"
         tools:ignore="OnClick" />
 
     <Button
-        android:id="@+id/buttoninverse"
-        style="@style/buttonoutlined"
-        android:layout_height="60dp"
-        android:text="@string/signup"
+        style="@style/buttonflat"
+        android:layout_marginTop="116dp"
+        android:onClick="openMain"
+        android:text="CANCEL"
         app:layout_constraintEnd_toEndOf="@id/guideline3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline2"
-        app:layout_constraintTop_toBottomOf="@id/button"
-        android:onClick="openSignup"
-
-        />
-
+        app:layout_constraintTop_toBottomOf="@id/til2"
+        tools:ignore="OnClick" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -114,7 +114,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.80" />
+        app:layout_constraintGuide_percent="0.8" />
+
+
+    <com.google.android.material.appbar.AppBarLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.First.AppBarOverlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+  
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
